tests/machine/x/kotlin/min_max_builtin.error
line 4:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/min_max_builtin.kt:4:18: error: unresolved reference: minOrNull
    println(nums.minOrNull() ?: 0)
                 ^
/workspace/mochi/tests/machine/x/kotlin/min_max_builtin.kt:5:18: error: unresolved reference: maxOrNull
    println(nums.maxOrNull() ?: 0)
                 ^

  3: fun main() {
  4:     println(nums.minOrNull() ?: 0)
  5:     println(nums.maxOrNull() ?: 0)
