tests/machine/x/kotlin/min_max_builtin.kt
val nums = mutableListOf(3, 1, 4)

fun main() {
    println(nums.minOrNull() ?: 0)
    println(nums.maxOrNull() ?: 0)
}
